--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header img {
 #buttons form{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #button-iniciar {
@@ -25,9 +26,13 @@ header img {
     border-radius: 30px;
     color: white;
     font-size: 19px;
+    width: fit-content;
+    margin-bottom: 20px;
+    margin-top: 400px;
 }
 
 #button-palabra {
+    width: fit-content;
     background-color: white;
     padding: 20px 60px;
     border: solid #0A3871 1px;
